--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gulp-control",
   "main": "./lib/gulp-control",
   "version": "0.3.2",
-  "description": "Run all gulp tasks via a click, see what is available",
+  "description": "Displays a list of gulp tasks and allows execution within Atom",
   "activationCommands": {
     "atom-workspace": "gulp-control:toggle"
   },
