--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "repository": "https://github.com/jacogr/atom-gulp-control",
   "license": "MIT",
   "engines": {
-    "atom": ">0.50.0"
+    "atom": ">=0.174.0 <2.0.0"
   },
   "dependencies": {
-    "ansi-to-html": "^0.3.0"
+    "ansi-to-html": "^0.3.0",
+    "atom-space-pen-views": "^2.0.3"
   }
 }
